Updated page TechDraw DimensionRepair/fr

--- a/wiki/fr/TechDraw_DimensionRepair.html
+++ b/wiki/fr/TechDraw_DimensionRepair.html
@@ -78,14 +78,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/fr">Cote axonom&eacute;trique</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_VerticalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_VerticalExtentDimension.html" title="TechDraw VerticalExtentDimension/fr">Cote &eacute;tendue verticale</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Hatch.html" title="TechDraw Hatch/fr">Hachures par motif</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -125,15 +123,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205519
+Cached time: 20260119205537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.244 seconds
-Preprocessor visited node count: 412/1000000
-Post&#8208;expand include size: 25727/2097152 bytes
-Template argument size: 9997/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 411/1000000
+Post&#8208;expand include size: 25769/2097152 bytes
+Template argument size: 10025/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -141,19 +139,19 @@ Unstrip post&#8208;expand size: 1258/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.939      1 -total
- 27.18%   15.202      1 Template:Userdocnavi/fr
- 19.64%   10.984      1 Template:TechDraw_Tools_navi/fr
- 15.54%    8.693      2 Template:Navigation_menu_2
- 13.13%    7.343      1 Template:GuiCommand/fr
- 12.65%    7.079      1 Template:PropertyData
-  7.16%    4.007      1 Template:Value
-  5.98%    3.343      2 Template:Docnav/fr
-  4.99%    2.790      3 Template:Button
-  3.96%    2.217      2 Template:MenuCommand
+100.00%   33.119      1 -total
+ 26.95%    8.925      1 Template:TechDraw_Tools_navi/fr
+ 21.22%    7.028      2 Template:Navigation_menu_2
+ 12.68%    4.200      1 Template:GuiCommand/fr
+ 12.67%    4.195      1 Template:Userdocnavi/fr
+ 12.37%    4.097      1 Template:PropertyData
+ 11.28%    3.736      1 Template:Value
+ 10.39%    3.440      2 Template:Docnav/fr
+  7.05%    2.336      1 Template:Variable
+  6.30%    2.088      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205519 and revision id 1741207. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205537 and revision id 1741209. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
