--- a/wiki/fr/TechDraw_DimensionRepair.html
+++ b/wiki/fr/TechDraw_DimensionRepair.html
@@ -21,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Dimensions &rarr; R&eacute;parer les r&eacute;f&eacute;rences d'une cote
+<td class="ctEven">TechDraw &rarr; Cotes &rarr; R&eacute;parer les r&eacute;f&eacute;rences d'une cote
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -123,15 +123,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205537
+Cached time: 20260119205653
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.445 seconds
 Preprocessor visited node count: 411/1000000
-Post&#8208;expand include size: 25769/2097152 bytes
-Template argument size: 10025/2097152 bytes
+Post&#8208;expand include size: 25759/2097152 bytes
+Template argument size: 10015/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 1258/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.119      1 -total
- 26.95%    8.925      1 Template:TechDraw_Tools_navi/fr
- 21.22%    7.028      2 Template:Navigation_menu_2
- 12.68%    4.200      1 Template:GuiCommand/fr
- 12.67%    4.195      1 Template:Userdocnavi/fr
- 12.37%    4.097      1 Template:PropertyData
- 11.28%    3.736      1 Template:Value
- 10.39%    3.440      2 Template:Docnav/fr
-  7.05%    2.336      1 Template:Variable
-  6.30%    2.088      3 Template:Button
+100.00%  126.354      1 -total
+ 29.09%   36.751      1 Template:Userdocnavi/fr
+ 17.06%   21.557      2 Template:Navigation_menu_2
+ 16.59%   20.962      1 Template:TechDraw_Tools_navi/fr
+ 13.90%   17.561      1 Template:GuiCommand/fr
+ 10.94%   13.829      1 Template:Value
+  8.32%   10.510      1 Template:PropertyData
+  8.21%   10.377      2 Template:Docnav/fr
+  7.51%    9.484      3 Template:Button
+  5.07%    6.409      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205537 and revision id 1741209. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205653 and revision id 1741216. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
