--- a/wiki/fr/TechDraw_DimensionRepair.html
+++ b/wiki/fr/TechDraw_DimensionRepair.html
@@ -51,7 +51,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw R&eacute;paration des cotes</b> peut ajuster les r&eacute;f&eacute;rences g&eacute;om&eacute;triques 2D ou 3D d'une cote. Ces r&eacute;f&eacute;rences peuvent devenir incorrectes en raison du "<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;me de d&eacute;nomination topologique</a>" ou de la suppression de lignes cach&eacute;es.
+<p>L'outil <b>TechDraw R&eacute;paration des cotes</b> peut ajuster les r&eacute;f&eacute;rences g&eacute;om&eacute;triques 2D ou 3D d'une cote. Ces r&eacute;f&eacute;rences peuvent devenir incorrectes en raison du &laquo;&nbsp;<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;me de d&eacute;nomination topologique</a>&nbsp;&raquo; ou de la suppression de lignes cach&eacute;es.
 </p><p>Voir <a href="../fr/TechDraw_LengthDimension.html#Limitations" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a> pour en savoir plus sur les dimensions et le probl&egrave;me de d&eacute;nomination topologique.
 </p><p><span id="Usage"></span>
 </p>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205653
+Cached time: 20260119205802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.445 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 411/1000000
 Post&#8208;expand include size: 25759/2097152 bytes
 Template argument size: 10015/2097152 bytes
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 1258/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  126.354      1 -total
- 29.09%   36.751      1 Template:Userdocnavi/fr
- 17.06%   21.557      2 Template:Navigation_menu_2
- 16.59%   20.962      1 Template:TechDraw_Tools_navi/fr
- 13.90%   17.561      1 Template:GuiCommand/fr
- 10.94%   13.829      1 Template:Value
-  8.32%   10.510      1 Template:PropertyData
-  8.21%   10.377      2 Template:Docnav/fr
-  7.51%    9.484      3 Template:Button
-  5.07%    6.409      1 Template:Incode
+100.00%   35.866      1 -total
+ 16.34%    5.860      1 Template:Value
+ 16.24%    5.826      1 Template:TechDraw_Tools_navi/fr
+ 14.07%    5.047      1 Template:Userdocnavi/fr
+ 13.96%    5.008      1 Template:PropertyData
+ 12.98%    4.654      2 Template:Navigation_menu_2
+ 12.46%    4.470      1 Template:GuiCommand/fr
+ 10.31%    3.699      2 Template:Docnav/fr
+  7.06%    2.531      2 Template:MenuCommand
+  7.04%    2.524      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205653 and revision id 1741216. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:304973-0!canonical and timestamp 20260119205802 and revision id 1741218. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
