--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -67,7 +67,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveLoft.svg&amp;filetimestamp=20200118062952&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveLoft.html" title="PartDesign AdditiveLoft">Sou&#269;tov&eacute; profilov&aacute;n&iacute;</a>: vytvo&#345;&iacute; t&#283;leso p&#345;echodem mezi dv&#283;ma nebo v&iacute;ce n&aacute;&#269;rtky.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditivePipe.svg&amp;filetimestamp=20200326013518&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditivePipe.html" title="PartDesign AdditivePipe">P&#345;i&#269;&iacute;st potrub&iacute;</a>: vytvo&#345;&iacute; t&#283;leso ta&#382;en&iacute;m jednoho nebo v&iacute;ce n&aacute;&#269;rt&#367; pod&eacute;l otev&#345;en&eacute; nebo uzav&#345;en&eacute; cesty.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveHelix.svg&amp;filetimestamp=20210205035955&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveHelix.html" title="PartDesign AdditiveHelix">P&#345;i&#269;&iacute;st &scaron;roubovici</a>: vytvo&#345;&iacute; t&#283;leso pomoc&iacute; ta&#382;en&iacute; n&aacute;&#269;rtu pod&eacute;l &scaron;roubovice.</li></ul>
-<ul><li><span id="PartDesign_CompPrimitiveAdditive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Additive Primitive:</span></li></ul>
+<ul><li><span id="PartDesign_CompPrimitiveAdditive"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Aditivn&iacute; z&aacute;kladn&iacute; t&#283;leso:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveBox.html" title="PartDesign AdditiveBox">Additive Box</a>: creates an additive box.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveCylinder.svg&amp;filetimestamp=20191211225841&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveCylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveCylinder.html" title="PartDesign AdditiveCylinder">Additive Cylinder</a>: creates an additive cylinder.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveSphere.svg&amp;filetimestamp=20191211230315&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveSphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveSphere.html" title="PartDesign AdditiveSphere">Additive Sphere</a>: creates an additive sphere.</li></ul></dd></dl>
@@ -187,12 +187,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205653
+Cached time: 20260119205809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.239 seconds
-Real time usage: 1.296 seconds
+CPU time usage: 0.263 seconds
+Real time usage: 1.477 seconds
 Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -203,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.510      1 -total
- 33.86%   18.798      1 Template:Userdocnavi/cs
- 28.30%   15.711      1 Template:PartDesign_Tools_navi/cs
- 13.66%    7.582      2 Template:Navigation_menu_2
-  8.29%    4.601      1 Template:TOCright
-  7.79%    4.327      1 Template:Version
-  7.43%    4.124      5 Template:VersionPlus
-  6.69%    3.716      2 Template:Docnav
-  5.80%    3.218      1 Template:MenuCommand
+100.00%   94.549      1 -total
+ 35.14%   33.227      1 Template:PartDesign_Tools_navi/cs
+ 32.06%   30.313      1 Template:Userdocnavi/cs
+ 21.82%   20.635      2 Template:Navigation_menu_2
+ 10.85%   10.263      2 Template:Docnav
+  6.93%    6.553      1 Template:Version
+  6.23%    5.886      5 Template:VersionPlus
+  4.55%    4.306      1 Template:TOCright
+  3.20%    3.029      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205651 and revision id 1741214. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205807 and revision id 1741220. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
