Updated page TechDraw SectionView/fr

--- a/wiki/fr/TechDraw_SectionView.html
+++ b/wiki/fr/TechDraw_SectionView.html
@@ -54,11 +54,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Vue en coupe</b> ins&egrave;re une vue en coupe transversale bas&eacute;e sur une vue de la pi&egrave;ce existante.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_section_ANSI.png&amp;filetimestamp=20221216102828&amp;.html" class="mw-file-description"><img src="../File/TechDraw_section_ANSI.png" decoding="async" width="350" height="194" class="mw-file-element" data-file-width="548" data-file-height="303"></a></span><br>
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_section_ANSI.png&amp;filetimestamp=20221216102828&amp;.html" class="mw-file-description"><img src="../File/TechDraw_section_ANSI.png" decoding="async" width="350" height="194" class="mw-file-element" data-file-width="548" data-file-height="303"></a></span><br>
 <span typeof="mw:File"><a href="../index.php?title=TechDraw_section_ISO.png&amp;filetimestamp=20221214213108&amp;.html" class="mw-file-description"><img src="../File/TechDraw_section_ISO.png" decoding="async" width="350" height="194" class="mw-file-element" data-file-width="548" data-file-height="303"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Vue en coupe d&eacute;j&agrave; plac&eacute;e qui montre les trous internes et une surface de coupe hachur&eacute;e.<br>
@@ -225,13 +222,13 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210230
+Cached time: 20260119210241
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 1741/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.587 seconds
+Preprocessor visited node count: 1740/1000000
 Post&#8208;expand include size: 40239/2097152 bytes
 Template argument size: 12562/2097152 bytes
 Highest expansion depth: 7/100
@@ -241,19 +238,19 @@ Unstrip post&#8208;expand size: 4674/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.841      1 -total
- 22.57%   14.637     20 Template:PropertyData
- 16.65%   10.798     26 Template:Variable
- 11.09%    7.194      6 Template:TitleProperty
-  8.92%    5.784      1 Template:TechDraw_Tools_navi/fr
-  7.31%    4.741     41 Template:Incode
-  7.27%    4.712      2 Template:Navigation_menu_2
-  6.47%    4.194      1 Template:Userdocnavi/fr
-  6.32%    4.099      6 Template:PropertyView
-  5.95%    3.860      5 Template:Version/fr
+100.00%  220.848      1 -total
+ 19.40%   42.850     20 Template:PropertyData
+ 12.22%   26.982      6 Template:TitleProperty
+ 12.02%   26.539     26 Template:Variable
+ 11.92%   26.331      1 Template:TechDraw_Tools_navi/fr
+ 11.54%   25.481      1 Template:Userdocnavi/fr
+  9.00%   19.876      6 Template:PropertyView
+  6.23%   13.754      1 Template:GuiCommand/fr
+  5.32%   11.740      2 Template:Navigation_menu_2
+  5.17%   11.409     15 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260119210229 and revision id 1741226. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260119210240 and revision id 1741228. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
