Created page with "* [[File:PartDesign_Groove.svg|32px]] [[PartDesign_Groove|Drážka]]: vytvoří drážku otočením náčrtu kolem osy."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -83,7 +83,7 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pocket.svg&amp;filetimestamp=20170324053209&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a>: vytvo&#345;&iacute; kapsu z vybran&eacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Hole.svg&amp;filetimestamp=20240405093159&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Hole.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Hole.html" title="PartDesign Hole">Otvor</a>: vytvo&#345;&iacute; prvek otvoru z vybran&eacute;ho n&aacute;&#269;rtu. N&aacute;&#269;rt mus&iacute; obsahovat jeden nebo v&iacute;ce kruh&#367;.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Groove.svg&amp;filetimestamp=20170324053310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Groove.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Groove.html" title="PartDesign Groove">Groove</a>: creates a groove by revolving a sketch around an axis.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Groove.svg&amp;filetimestamp=20170324053310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Groove.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Groove.html" title="PartDesign Groove">Dr&aacute;&#382;ka</a>: vytvo&#345;&iacute; dr&aacute;&#382;ku oto&#269;en&iacute;m n&aacute;&#269;rtu kolem osy.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveLoft.svg&amp;filetimestamp=20200917234122&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveLoft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveLoft.html" title="PartDesign SubtractiveLoft">Subtractive Loft</a>: creates a solid shape by making a transition between two or more sketches and subtracts it from the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePipe.svg&amp;filetimestamp=20200917233608&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePipe.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePipe.html" title="PartDesign SubtractivePipe">Subtractive Pipe</a>:  creates a solid shape by sweeping one or more sketches along an open or closed path and subtracts it from the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveHelix.svg&amp;filetimestamp=20210205040332&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveHelix.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveHelix.html" title="PartDesign SubtractiveHelix">Subtractive Helix</a>: creates a solid shape by sweeping a sketch along a helix and subtracts it from the active body.</li></ul>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119211003
+Cached time: 20260119211129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.281 seconds
-Real time usage: 1.303 seconds
+CPU time usage: 0.261 seconds
+Real time usage: 1.019 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.104      1 -total
- 42.21%   38.030      1 Template:Userdocnavi/cs
- 21.09%   18.999      2 Template:Navigation_menu_2
- 17.01%   15.331      1 Template:PartDesign_Tools_navi/cs
-  7.75%    6.982      1 Template:Version
-  7.59%    6.840      2 Template:Docnav
-  6.65%    5.996      1 Template:TOCright
-  6.28%    5.656      1 Template:MenuCommand
-  5.26%    4.737      5 Template:VersionPlus
+100.00%   95.491      1 -total
+ 29.46%   28.131      1 Template:Userdocnavi/cs
+ 23.88%   22.805      1 Template:PartDesign_Tools_navi/cs
+ 16.59%   15.842      2 Template:Navigation_menu_2
+ 11.68%   11.154      5 Template:VersionPlus
+  9.71%    9.270      1 Template:TOCright
+  8.00%    7.638      1 Template:Version
+  6.50%    6.204      2 Template:Docnav
+  4.71%    4.501      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211002 and revision id 1741264. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211128 and revision id 1741266. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
