Created page with "* [[File:PartDesign_Fillet.svg|32px]] [[PartDesign_Fillet|Zaoblení]]: zaobluje hrany aktivního tělesa."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -105,7 +105,7 @@
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_.C3.BAprav_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_&uacute;prav_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; &uacute;prav d&iacute;l&#367;</span></h3>
 <p>Tyto n&aacute;stroje aplikuj&iacute; &uacute;pravu na hrany nebo plochy.
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Fillet</a>: fillets (rounds) edges of the active body.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Zaoblen&iacute;</a>: zaobluje hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Chamfer</a>: chamfers edges of the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Draft.svg&amp;filetimestamp=20170324053440&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Draft.html" title="PartDesign Draft">Draft</a>: applies an angular draft to selected faces of the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Thickness</a>: creates a thick shell from the active body and opens selected face.</li></ul>
@@ -193,12 +193,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119212910
+Cached time: 20260119212949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.227 seconds
-Real time usage: 0.410 seconds
+CPU time usage: 0.211 seconds
+Real time usage: 0.459 seconds
 Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -209,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.751      1 -total
- 29.23%    8.405      1 Template:Userdocnavi/cs
- 24.04%    6.913      1 Template:PartDesign_Tools_navi/cs
- 17.54%    5.044      2 Template:Navigation_menu_2
- 10.61%    3.050      5 Template:VersionPlus
-  9.97%    2.866      1 Template:MenuCommand
-  9.63%    2.768      2 Template:Docnav
-  8.95%    2.573      1 Template:Version
-  3.49%    1.002      1 Template:TOCright
+100.00%   52.373      1 -total
+ 35.00%   18.328      1 Template:Userdocnavi/cs
+ 17.86%    9.354      1 Template:MenuCommand
+ 15.95%    8.351      1 Template:PartDesign_Tools_navi/cs
+ 12.71%    6.657      2 Template:Navigation_menu_2
+  8.48%    4.439      1 Template:TOCright
+  8.38%    4.391      5 Template:VersionPlus
+  8.12%    4.253      2 Template:Docnav
+  3.41%    1.786      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212910 and revision id 1741299. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212949 and revision id 1741301. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
